--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="Calgary's Premier Youth Drone Competition - Experience the thrill of drone soccer in our state-of-the-art competition arena." />
+    <meta name="description" content="Calgary's Premier Youth Drone Competition - Presented by AUAV." />
     <meta name="keywords" content="drone soccer, drone competition, Calgary, youth competition, drone sports" />
-    <title>DroneUp - Calgary's Premier Youth Drone Competition</title>
+    <title>DroneUp Competition</title>
     
     <!-- Google Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
